Cambios en el espacio de mi respectivo nombre

--- a/Taller/Taller.csproj
+++ b/Taller/Taller.csproj
@@ -81,6 +81,7 @@
     <Content Include="css\Miestilo.css" />
     <Content Include="css\MiestiloInicio.css" />
     <Content Include="css\style.css" />
+    <Content Include="img\Canada.jpg" />
     <Content Include="img\tokyo.jpg" />
     <Content Include="index.aspx" />
     <Content Include="inicioUsuario.aspx" />
