--- a/Taller/Taller.csproj
+++ b/Taller/Taller.csproj
@@ -83,6 +83,7 @@
     <Content Include="css\style.css" />
     <Content Include="img\Canada.jpg" />
     <Content Include="img\italia.jpg" />
+    <Content Include="img\italia2.jpg" />
     <Content Include="img\tokyo.jpg" />
     <Content Include="index.aspx" />
     <Content Include="inicioUsuario.aspx" />
